feat(cleanup): improved styles and stuff

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,16 @@ a:hover {
   @apply my-6;
 }
 
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+blockquote, dd, dl, fieldset, figure, h1, h2, h3, h4, h5, h6, hr, p, pre {
+  margin: 0;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
